gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cluster-ingressgateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - kube.wfgmb.com
        - toremove.wfgmb.com
        - devops.wfgmb.com
        - nafdac-dev-ng.wfgmb.com
        - nafdac-qa-ng.wfgmb.com
        - wuprofile-qa-ng.wfgmb.com
        - guce-dev-gn.wfgmb.com
        - guce-cg-staging.wfgmb.com
        - guce-ne-qa.wfgmb.com
        - guce-dev-cf.wfgmb.com
        - guce-qa-ne.wfgmb.com
        - wv-cg-staging.wfgmb.com
        - wv-dev-bj.wfgmb.com
        - wv-qa-bj.wfgmb.com
        - wv-dev-ci.wfgmb.com
        - wv-qa-ci.wfgmb.com
        - lpco-cg-staging.wfgmb.com
        - lpco-qa-ne.wfgmb.com
        - declaration-cg-staging.wfgmb.com
        - ph-qa.wfgmb.com
        - bj-qa.wfgmb.com
        - cg-qa.wfgmb.com
        - gn-qa.wfgmb.com
        - ne-qa.wfgmb.com
        - ng-qa.wfgmb.com
        - phdev.wfgmb.com
        - bjdev.wfgmb.com
        - cgdev.wfgmb.com
        - gndev.wfgmb.com
        - nedev.wfgmb.com
        - cidev.wfgmb.com
        - cfdev.wfgmb.com
        - phqa.wfgmb.com
        - bjqa.wfgmb.com
        - cgqa.wfgmb.com
        - gnqa.wfgmb.com
        - neqa.wfgmb.com
        - ngqa.wfgmb.com
        - cidev.wfgmb.com
        - cfdev.wfgmb.com
        - wu-qa-ne.wfgmb.com
      port:
        name: http
        number: 80
        protocol: HTTP
